VOL-3202 replace VOL button classes with GDS

--- a/app/selfserve/module/Application/view/application/pages/ask-vehicles-question.phtml
+++ b/app/selfserve/module/Application/view/application/pages/ask-vehicles-question.phtml
@@ -13,7 +13,7 @@
             <?= $this->formErrors($this->form); ?>
             <?= $this->form()->openTag($this->form); ?>
             <?= $this->formRadioVertical($this->form->getRadioElement()); ?>
-            <div class="actions-container">
+            <div class="govuk-button-group">
                 <?= $this->formButton($this->form->getNextButtonElement()); ?>
                 <?= $this->formButton($this->form->getReturnToOverviewButtonElement()); ?>
             </div>
