--- a/app/selfserve/module/Olcs/view/olcs/uploads/partial/detail-failed.phtml
+++ b/app/selfserve/module/Olcs/view/olcs/uploads/partial/detail-failed.phtml
@@ -25,4 +25,4 @@
     ?>
 </div>
 
-<a href="<?php echo $this->url('bus-registration/ebsr');?>" class="action--primary"><?php echo $this->translate('ebsr-try-again'); ?></a>
+<a href="<?php echo $this->url('bus-registration/ebsr');?>" class="govuk-button" role="button" draggable="false" data-module="govuk-button"><?php echo $this->translate('ebsr-try-again'); ?></a>
