--- a/app/selfserve/module/Olcs/view/olcs/uploads/partial/detail-success.phtml
+++ b/app/selfserve/module/Olcs/view/olcs/uploads/partial/detail-success.phtml
@@ -23,4 +23,4 @@
     ?>
 </div>
 
-<a href="<?php echo $this->url('bus-registration/details', ['busRegId' => $ebsrSubmission['busReg']['id']]);?>" class="action--primary"><?php echo $this->translate('ebsr-view-registration-details'); ?></a>
+<a href="<?php echo $this->url('bus-registration/details', ['busRegId' => $ebsrSubmission['busReg']['id']]);?>" class="govuk-button" role="button" draggable="false" data-module="govuk-button"><?php echo $this->translate('ebsr-view-registration-details'); ?></a>
