--- a/app/selfserve/module/Olcs/view/pages/auth/change-password.phtml
+++ b/app/selfserve/module/Olcs/view/pages/auth/change-password.phtml
@@ -44,7 +44,7 @@
                     <?php echo $this->formRow($form->get('oldPassword')); ?>
                     <?php echo $this->formRow($form->get('newPassword')); ?>
                     <?php echo $this->formRow($form->get('confirmPassword')); ?>
-                    <div class="actions-container">
+                    <div class="govuk-button-group">
                         <?php echo $this->formElement($form->get('submit')); ?>
                         <?php echo $this->formElement($form->get('cancel')); ?>
                     </div>
