--- a/app/selfserve/module/Olcs/view/pages/auth/expired-password.phtml
+++ b/app/selfserve/module/Olcs/view/pages/auth/expired-password.phtml
@@ -40,7 +40,7 @@
                     <?php if ($isOpenAM) {echo $this->formRow($form->get('oldPassword'));} ?>
                     <?php echo $this->formRow($form->get('newPassword')); ?>
                     <?php echo $this->formRow($form->get('confirmPassword')); ?>
-                    <div class="actions-container">
+                    <div class="govuk-button-group">
                         <?php echo $this->formElement($form->get('submit')); ?>
                     </div>
                 </fieldset>
