--- a/app/selfserve/module/Olcs/view/pages/auth/forgot-password.phtml
+++ b/app/selfserve/module/Olcs/view/pages/auth/forgot-password.phtml
@@ -31,11 +31,11 @@
             echo $this->form()->openTag($form); ?>
                 <fieldset>
                     <?php echo $this->formRow($form->get('username')); ?>
-                    <div class="actions-container">
+                    <div class="govuk-button-group">
                         <?php echo $this->formElement($form->get('submit')); ?>
                         <?php echo $this->formElement($form->get('cancel')); ?>
                     </div>
-                    <div class="actions-container">
+                    <div class="govuk-button-group">
                         <a class="govuk-link" href="<?php echo $this->url('user-forgot-username'); ?>"
                             aria-label="<?php echo $this->escapeHtmlAttr($this->translate('auth.forgot-username.label.audio')); ?>">
                             <?php echo $this->escapeHtml($this->translate('auth.forgot-username.label')); ?>
