--- a/app/selfserve/module/Olcs/view/pages/auth/reset-password.phtml
+++ b/app/selfserve/module/Olcs/view/pages/auth/reset-password.phtml
@@ -32,7 +32,7 @@
                 <fieldset>
                     <?php echo $this->formRow($form->get('newPassword')); ?>
                     <?php echo $this->formRow($form->get('confirmPassword')); ?>
-                    <div class="actions-container">
+                    <div class="govuk-button-group">
                         <?php echo $this->formElement($form->get('submit')); ?>
                     </div>
                 </fieldset>
