--- a/app/selfserve/module/Olcs/view/dashboard-empty.phtml
+++ b/app/selfserve/module/Olcs/view/dashboard-empty.phtml
@@ -1,8 +1,8 @@
 <div class="empty__wrapper">
     <div class="empty">
         <p><?php echo $this->translate('dashboard-no-licences-text'); ?></p>
-        <div class="actions-container">
-            <a class="action--primary large" href="<?php echo $this->url('create_application'); ?>" >
+        <div class="govuk-button-group">
+            <a class="govuk-button" role="button" draggable="false" data-module="govuk-button" href="<?php echo $this->url('create_application'); ?>" >
                 <?php echo $this->translate('application.new.button.first'); ?>
             </a>
         </div>
