--- a/app/selfserve/module/Olcs/view/olcs/user-registration/account-created.phtml
+++ b/app/selfserve/module/Olcs/view/olcs/user-registration/account-created.phtml
@@ -15,7 +15,7 @@ echo $this->partial(
       <p><?php echo $this->translate('user-registration.page.account-created.text'); ?></p>
     </div>
   
-    <div class="actions-container">
+    <div class="govuk-button-group">
         <?php echo $this->link($this->url('index'), 'back-to-home'); ?>
     </div>
     
