--- a/app/selfserve/module/Olcs/view/olcs/user-registration/check-details.phtml
+++ b/app/selfserve/module/Olcs/view/olcs/user-registration/check-details.phtml
@@ -30,7 +30,7 @@ echo $this->partial(
       <p><?php echo $this->translate('markup-support-helpline');?></p>
     </div>
   
-    <div class="actions-container">
+    <div class="govuk-button-group">
       <?php echo $this->link($this->url('index'), 'back-to-home'); ?>
     </div>
     
