--- a/app/selfserve/module/Olcs/view/pages/my-details-page.phtml
+++ b/app/selfserve/module/Olcs/view/pages/my-details-page.phtml
@@ -16,8 +16,8 @@
       <div class="govuk-inset-text">
           <p><?php echo $this->translate('name-change.locked.guidance.message'); ?></p>
       </div>
-      <p id="top" class="actions-container">
-          <a class="action--tertiary" href="<?php echo $this->url('change-password'); ?>">
+      <p id="top" class="govuk-button-group">
+          <a class="govuk-button govuk-button--secondary" href="<?php echo $this->url('change-password'); ?>">
               <?php echo $this->translate('my-details.change-password.label');?>
           </a>
       </p>
